; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_accel_2d.c_psb_2d_wait_available.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/gma500/extr_accel_2d.c_psb_2d_wait_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_psb_private = type { i32 }

@PSB_CR_2D_SOCIF = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i64 0, align 8
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_psb_private*, i32)* @psb_2d_wait_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @psb_2d_wait_available(%struct.drm_psb_private* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drm_psb_private*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.drm_psb_private* %0, %struct.drm_psb_private** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* @PSB_CR_2D_SOCIF, align 4
  %9 = call i32 @PSB_RSGX32(i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i64, i64* @jiffies, align 8
  %11 = load i64, i64* @HZ, align 8
  %12 = add i64 %10, %11
  store i64 %12, i64* %7, align 8
  br label %13

13:                                               ; preds = %29, %2
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %5, align 4
  %16 = icmp ult i32 %14, %15
  br i1 %16, label %17, label %30

17:                                               ; preds = %13
  %18 = load i32, i32* @PSB_CR_2D_SOCIF, align 4
  %19 = call i32 @PSB_RSGX32(i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = load i64, i64* @jiffies, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i64 @time_after(i64 %20, i64 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.drm_psb_private*, %struct.drm_psb_private** %4, align 8
  %26 = call i32 @psb_spank(%struct.drm_psb_private* %25)
  %27 = load i32, i32* @EIO, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %31

29:                                               ; preds = %17
  br label %13

30:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %31

31:                                               ; preds = %30, %24
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @PSB_RSGX32(i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @psb_spank(%struct.drm_psb_private*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
